// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Result renders the result 1`] = `
<div
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "white",
      "borderBottom": "1px solid grey",
      "padding": 10,
    }
  }
>
  <div>
    <div
      style={
        Object {
          "float": "left",
          "marginRight": 10,
        }
      }
    >
      <img
        src="img/chevron-down.svg"
        style={
          Object {
            "height": 20,
            "width": 20,
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "display": "inline-block",
          "width": "65%",
        }
      }
    >
      Foo
    </div>
    <div
      style={
        Object {
          "float": "right",
        }
      }
    >
      10
       mins
    </div>
  </div>
</div>
`;

exports[`Result renders the result with details 1`] = `
<div
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#ddd",
      "borderBottom": "1px solid grey",
      "padding": 10,
    }
  }
>
  <div>
    <div
      style={
        Object {
          "float": "left",
          "marginRight": 10,
        }
      }
    >
      <img
        src="img/chevron-up.svg"
        style={
          Object {
            "height": 20,
            "width": 20,
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "display": "inline-block",
          "width": "65%",
        }
      }
    >
      Foo
    </div>
    <div
      style={
        Object {
          "float": "right",
        }
      }
    >
      10
       mins
    </div>
  </div>
  <div
    style={
      Object {
        "fontSize": "75%",
        "margin": "10px 0px 0px 30px",
      }
    }
  >
    <div>
      Season ticket price: £
      1000
    </div>
  </div>
</div>
`;
